[gd_scene load_steps=10 format=3 uid="uid://qq17v0bnfm5a"]

[ext_resource type="Script" uid="uid://faybbda1kyvr" path="res://Scripts/menu.gd" id="1_tij55"]
[ext_resource type="Texture2D" uid="uid://b5fvo17uxad0w" path="res://Assets/logo preto e branco.png" id="2_353f8"]
[ext_resource type="Texture2D" uid="uid://bhxxgm3ej87tf" path="res://Assets/botoes/Play normal.png" id="3_v3kjt"]
[ext_resource type="Texture2D" uid="uid://3s6lw1sdbagf" path="res://Assets/botoes/Play pressed.png" id="4_3hayu"]
[ext_resource type="Texture2D" uid="uid://bx7t4ni4olab" path="res://Assets/botoes/Play hover.png" id="5_vlcut"]
[ext_resource type="Texture2D" uid="uid://dxhjfulj5kiov" path="res://Assets/botoes/Quit normal.png" id="6_g37sx"]
[ext_resource type="Texture2D" uid="uid://ccjf5tl1j87ws" path="res://Assets/botoes/Quit pressed.png" id="7_0oyh4"]
[ext_resource type="Texture2D" uid="uid://dx7lkfeaoe00g" path="res://Assets/botoes/Quit hover.png" id="8_2kl40"]
[ext_resource type="AudioStream" uid="uid://c262nlqnhlkbx" path="res://Assets/Audios In Game/menu soundtrack (1).wav" id="9_3hayu"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tij55")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.258824, 0.243137, 0.372549, 1)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(825, 333)
scale = Vector2(0.488657, 0.488657)
texture = ExtResource("2_353f8")

[node name="Iniciar" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -186.881
offset_top = 80.875
offset_right = 175.119
offset_bottom = 165.875
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("3_v3kjt")
texture_pressed = ExtResource("4_3hayu")
texture_hover = ExtResource("5_vlcut")

[node name="Sair" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -182.881
offset_top = 198.375
offset_right = 179.119
offset_bottom = 283.375
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("6_g37sx")
texture_pressed = ExtResource("7_0oyh4")
texture_hover = ExtResource("8_2kl40")

[node name="menu_ost" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_3hayu")

[connection signal="pressed" from="Iniciar" to="." method="_on_iniciar_pressed"]
[connection signal="pressed" from="Sair" to="." method="_on_sair_pressed"]
